<resources>
    <string name="app_name">QR Intercom</string>
    <string name="login_title">Resident Portal</string>
    <string name="login_subtitle">Sign in to receive visitor calls</string>
    <string name="phone_hint">Phone number</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="reg_unit_hint">Unit / Address</string>
    <string name="reg_name_hint">Full name</string>
    <string name="reg_email_hint">Email (optional)</string>
    <string name="reg_password_hint">Create password</string>
    <string name="btn_register">Create Account</string>
    <string name="toggle_to_register">Create an account</string>
    <string name="toggle_to_login">Already registered? Sign in</string>
    <string name="btn_logout">Logout</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="waiting_calls">Waiting for visitor calls…</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="visitor_calling">Visitor calling you</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_end_call">End Call</string>
    <string name="call_ended">Call ended</string>
    <string name="unlocking">Unlocking…</string>
    <string name="unlocked">Door Unlocked</string>
    <string name="notification_channel_name">Incoming Calls</string>
    <string name="notification_channel_desc">Notifications for visitor calls</string>
    <string name="notification_call_title">Incoming Visitor Call</string>
    <string name="notification_call_text">Tap to answer</string>
    <string name="notification_service_title">QR Intercom</string>
    <string name="notification_service_text">Listening for calls…</string>
</resources>
